Adjust icon spacing according to parent repo issue

--- a/argos@pew.worldwidemann.com/stylesheet.css
+++ b/argos@pew.worldwidemann.com/stylesheet.css
@@ -12,3 +12,8 @@
 .argos-menu-item-edit {
   font-size: smaller;
 }
+
+.panel-button .argos-line-view {
+    padding: 0px 4px;
+}
+
